--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,6 +1,6 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/jason54pe/BlackAlert-BT
 branches:
-- master
+- poggit-ci
 projects:
   BlackAlert-BT:
     path: ""
